--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "botmaster-test": "0.0.2"
   },
   "dependencies": {
+    "moment-timezone": "^0.5.11",
     "ramda": "^0.23.0"
   },
   "peerDependencies": {
