--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "coveralls": "^2.11.15",
     "documentation-readme": "^2.1.1",
     "istanbul": "^0.4.5",
+    "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.2.0",
     "mockdate": "^2.0.1",
     "sinon": "^1.17.7"
