--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ramda": "^0.23.0"
   },
   "peerDependencies": {
-    "botmaster-fulfill": ">= 2.0.4"
+    "botmaster-fulfill": ">= 2.0.4",
+    "botmaster": ">= 2.2.7"
   }
 }
