--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sinon": "^1.17.7"
   },
   "dependencies": {
+    "debug": "^2.6.0",
     "moment-timezone": "^0.5.11",
     "ramda": "^0.23.0"
   },
