--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "istanbul cover _mocha -- --recursive dist/tests",
     "tests": "mocha --recursive src/tests",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "build": "mkdir -p dist && babel --presets=es2015,babili src --out-dir dist",
+    "build": "mkdir -p dist && babel --presets=es2015 src --out-dir dist",
     "docs": "documentation readme src/index.js --section=\"Reference\"",
     "prepublish": "npm run build"
   },
@@ -38,10 +38,9 @@
   "homepage": "https://github.com/botmasterai/botmaster-fulfill-actions#readme",
   "devDependencies": {
     "babel-cli": "^6.22.2",
-    "babel-preset-babili": "0.0.10",
     "babel-preset-es2015": "^6.22.0",
-    "botmaster": "git+https://github.com/botmasterai/botmaster.git",
-    "botmaster-fulfill": "2.1.3",
+    "botmaster": "git+https://github.com/botmasterai/botmaster.git#patch-outgoingware",
+    "botmaster-fulfill": "git+https://github.com/botmasterai/botmaster-fulfill.git",
     "botmaster-test": "0.0.4",
     "coveralls": "^2.11.15",
     "documentation": "^4.0.0-beta.18",
@@ -49,7 +48,8 @@
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.2.0",
     "mockdate": "^2.0.1",
-    "sinon": "^1.17.7"
+    "sinon": "^1.17.7",
+    "timezone-mock": "0.0.0"
   },
   "dependencies": {
     "debug": "^2.6.0",
@@ -57,7 +57,7 @@
     "ramda": "^0.23.0"
   },
   "peerDependencies": {
-    "botmaster-fulfill": ">= 2.0.4",
+    "botmaster-fulfill": ">= 2.1.4",
     "botmaster": ">= 2.2.7"
   }
 }
