--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-preset-es2015": "^6.22.0",
-    "botmaster": "git+https://github.com/botmasterai/botmaster.git#patch-outgoingware",
-    "botmaster-fulfill": "git+https://github.com/botmasterai/botmaster-fulfill.git",
+    "botmaster": "^2.3.0",
+    "botmaster-fulfill": "^3.1.2",
     "botmaster-test": "0.0.4",
     "coveralls": "^2.11.15",
     "documentation": "^4.0.0-beta.18",
@@ -52,12 +52,13 @@
     "timezone-mock": "0.0.0"
   },
   "dependencies": {
+    "botmaster-fulfill": "^3.1.2",
     "debug": "^2.6.0",
     "moment-timezone": "^0.5.11",
     "ramda": "^0.23.0"
   },
   "peerDependencies": {
-    "botmaster-fulfill": ">= 2.1.4",
-    "botmaster": ">= 2.2.7"
+    "botmaster-fulfill": ">=3.1.2",
+    "botmaster": ">=2.3.0"
   }
 }
